fixed alignments and added posts (not completely ready)

--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -10,6 +10,8 @@
     height: 100%;
     font-size: 14px;
     background: linear-gradient(rgba(128,199,239,1), rgba(89,35,206,1));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 
   html {
@@ -224,113 +226,68 @@
   
   /* ----- */
   
-  .ConfessionBox {
-  box-sizing: border-box;
-  
-  position: absolute;
-  width: 1000px;
-  height: 200px;
-  left: 175px;
-  top: 50px;
-  
-  background: #FFFFFF;
-  border: 3px solid #BABABA;
-  border-radius: 15px;
-  font-family: 'Roboto';
+  .confession{
+    display: flex;
   }
   
-  .ConfessionBox .DivideLine {
-  position: absolute;
-  width: 180px;
-  height: 0px;
-  left: 925px;
-  top: 560px;
-  
-  border: 3px solid #BABABA;
-  transform: rotate(90deg);
+  .confessionFeed{
+    flex:5.5
   }
-  
-  .ConfessionBox .Menu {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 950px;
-  top: 75px;
+
+  .confessionFeedWrapper{
+    padding: 20px;
+    flex-direction: column;
+    display: flex;
   }
-  
-  .ConfessionBox .Comments {
-  position: absolute;
-  width: 60px;
-  height: 50px;
-  left: 950px;
-  top: 425px;
+
+  .confessionPost{
+    display: flex;
+    width: 50%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 16px -8px rgb(0 0 0 / 68%);
+    margin: 30px 0;
+    align-self: center;
+    justify-content: center;
+    z-index: 1;
   }
-  
-  .ConfessionBox .TotalComments {
-  position: absolute;
-  width: 26px;
-  height: 35px;
-  left: 1011px;
-  top: 450px;
-  
-  font-style: normal;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 35px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  
-  color: rgba(70, 24, 203, 0.921875);
+
+  .confessionPostWrapper{
+    padding: 10px;
+    width: 66%;
   }
-  
-  .ConfessionBox .Upvote {
-  box-sizing: border-box;
-  
-  position: absolute;
-  width: 1px;
-  height: 0px;
-  left: 1125px;
-  top: 100px;
-  
-  border: 10px solid #BABABA;
-  transform: rotate(-90deg);
+
+  .confessionPostEdit{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-  
-  .ConfessionBox .Downvote {
-  box-sizing: border-box;
-  
-  position: absolute;
-  width: 1px;
-  height: 0px;
-  left: 1125px;
-  top: 200px;
-  
-  border: 10px solid #BABABA;
-  transform: rotate(90deg);
+
+  .confessionPostEditButton{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-  
-  .ConfessionBox .TotalVotes {
-  position: absolute;
-  width: 18px;
-  height: 35px;
-  left: 1117px;
-  top: 132px;
-  
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 35px;
-  display: flex;
-  align-items: center;
-  
-  color: rgba(70, 24, 203, 0.921875);
+
+  .confessionText{
+    margin: 20px 0;
+    overflow-wrap: break-word;
+    max-width: 700px;
+    text-align: center;
   }
-  
+
+  .confessionVotesComments{
+    display: flex;
+    align-items: center;
+  }
+
+  .comments{
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
   /* ----- */
   
   .LandingPageHeader {
-  position: absolute;
+  position: relative;
   width: 90%;
   height: 10%;
   left: 5%;
@@ -351,7 +308,7 @@
   transition: opacity 0.5s linear;   
 
   background-image: linear-gradient(180deg, #80C7EF 0%, #5A23CE 99.97%, rgba(90, 170, 216, 0.0701908) 99.98%, rgba(70, 24, 203, 0.921875) 100%);
-  z-index: 9;
+  z-index: 1;
   }
   
   .LandingPageHeader .Text {
@@ -484,7 +441,7 @@
   /* ----- */
   
   .PageTip {
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -520,14 +477,12 @@
   /* ----- */
   
   .Tools {
-  box-sizing: border-box;
-  
-  position: absolute;
+  display: flex;
   width: 100%;
-  height: 10%;
-  left: 0%;
-  top: 0%;
-  
+  height: 100px;
+  align-items: center;
+  top: 0;
+  z-index: 999;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   
@@ -536,7 +491,6 @@
   height: 5vmin;
   position: absolute;
   left: 43%;
-  top: 25%;
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -564,7 +518,7 @@
   height: 5vmin;
   position: absolute;
   right: 43%;
-  top: 25%;
+ 
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -615,6 +569,7 @@
   .ProfileContainer {
   display: flex;
   align-content: center;
+  margin-left: 7%;
   }
   
   .ProfileContainer .TextName {
@@ -625,7 +580,7 @@
   line-height: 4vmin;
   color: white;
   
-  position: absolute;
+  flex: 5;
   left: 10%;
   top: 45%;
   
@@ -635,9 +590,9 @@
   .ProfileTool {
   width: 7vmin;
   height: 7vmin;
-  position: absolute;
-  left: 5%;
-  top: 25%;
+  flex: 5;
+  height: 50%;
+  text-align: center;
   }
   
   .ProfileTool .Text {
@@ -666,6 +621,10 @@
   transform: translateY(1vmin);
   }
 
+  .toolsCenter{
+    flex: 5;
+    height: 50%;
+  }
   /* End of LandingPage.js */
 
   /* Profile.js */
